--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rocketchat-node",
-  "version": "1.0.0",
+  "name": "rocketchat-nodejs",
+  "version": "0.0.1",
   "description": "node.js library for Rocket.Chat REST API",
   "main": "build/Client.compiled.js",
   "scripts": {
