--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "rocketchat-nodejs",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "node.js library for Rocket.Chat REST API",
   "main": "build/Client.compiled.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack src/Client.js",
-    "install": "webpack src/Client.js"
+    "build": "webpack src/Client.js"
   },
   "author": "Vitor Nagao",
   "license": "MIT",
@@ -15,9 +14,7 @@
   },
   "homepage": "https://github.com/vitor-nagao/rocketchat-nodejs.git#readme",
   "dependencies": {
-    "unirest": "^0.5.1",
-    "webpack": "^2.3.3",
-    "webpack-node-externals": "^1.5.4"
+    "unirest": "^0.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -29,5 +26,7 @@
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
     "jest": "^19.0.2",
+    "webpack": "^2.3.3",
+    "webpack-node-externals": "^1.5.4"
   }
 }
